--- a/css/styles.css
+++ b/css/styles.css
@@ -40,10 +40,20 @@ a {
   margin: 0 auto;
 }
 
+.page-header,
+.order,
+.team,
+.page-footer {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 /* header */
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -89,6 +99,22 @@ a {
   color: #2e2f42;
   display: block;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link.current {
+  position: relative;
+}
+
+.nav-link.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  background-color: #404bbf;
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
 }
 
 .contacts {
@@ -108,12 +134,13 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
 .nav-link:focus,
 .contacts-link:hover,
-.contacts-link:focus {
+.contacts-link:focus .nav-link.current {
   color: #404bbf;
 }
 
@@ -122,6 +149,15 @@ a {
 .order {
   background-color: #2e2f42;
   padding: 188px 0;
+
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
 .order-container {
@@ -154,6 +190,7 @@ a {
   color: #fff;
   background-color: #4d5ae5;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-btn:hover,
@@ -189,6 +226,21 @@ a {
 
 .core-item {
   width: calc((100% - 72px) / 4);
+}
+
+.core-item-icon {
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background-color: #f4f4fd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.core-icon {
 }
 
 .core-subtitle {
@@ -233,10 +285,13 @@ a {
   background-color: #ffffff;
   width: calc((100% - 24 * 3) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-item-info {
-  padding: 32px 0;
+  padding-top: 32px;
+  padding-bottom: 8px;
 }
 
 .team-item-img {
@@ -258,6 +313,40 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+}
+
+.team-item-icon {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 32px;
+}
+
+.team-item-icon-list {
+}
+
+.team-item:hover .team-item-link {
+  background-color: #404bbf;
+}
+.team-item-icon-list:hover .team-item-link {
+  background-color: #31d0aa;
+}
+
+.team-item-link {
+  background-color: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-icon,
+.footer-icon {
+  fill: #f4f4fd;
 }
 
 /* portfolio */
@@ -286,10 +375,37 @@ a {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-cover-wrap {
+  position: relative;
+  overflow: hidden;
 }
 
 .portfolio-item-img {
   max-width: 100%;
+}
+
+.portfolio-item:hover .portfolio-cover-text {
+  transform: translateY(0);
+}
+.portfolio-cover-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 40px 32px 0 32px;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: auto;
+
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
 }
 
 .portfolio-item-info {
@@ -321,6 +437,11 @@ a {
 }
 
 .footer-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-logo-text {
 }
 
 .footer-logo {
@@ -338,4 +459,38 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+}
+
+.footer-item {
+  margin-left: 20px;
+}
+.footer-item-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+.footer-item-icon {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  justify-content: center;
+}
+.footer-item-link {
+  background-color: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-item-link:hover {
+  background-color: #31d0aa;
+}
+
+.footer-icon {
 }
