--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ a {
 
 .nav-link.current {
   position: relative;
+  color: #404bbf;
 }
 
 .nav-link.current::after {
@@ -315,12 +316,15 @@ a {
   text-align: center;
 }
 
+.team-contener-icon {
+  padding: 32px 0;
+}
+
 .team-item-icon {
   display: flex;
   gap: 24px;
   align-items: center;
   justify-content: center;
-  padding-bottom: 32px;
 }
 
 .team-item-icon-list {
@@ -377,6 +381,7 @@ a {
   width: calc((100% - 48px) / 3);
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-cover-wrap {
@@ -395,7 +400,7 @@ a {
   position: absolute;
   top: 0;
   left: 0;
-  padding: 40px 32px 0 32px;
+  padding: 40px 32px;
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -462,7 +467,7 @@ a {
 }
 
 .footer-item {
-  margin-left: 20px;
+  margin-left: 120px;
 }
 .footer-item-text {
   font-weight: 500;
@@ -472,7 +477,7 @@ a {
   color: #fff;
   margin-bottom: 16px;
 }
-.footer-item-icon {
+.footer-item-list-icon {
   display: flex;
   gap: 16px;
   align-items: center;
@@ -488,9 +493,13 @@ a {
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-item-link:hover {
+.footer-item-link:hover,
+.footer-item-link:focus {
   background-color: #31d0aa;
 }
 
 .footer-icon {
+}
+
+.footer-item-icon {
 }
