--- a/css/styles.css
+++ b/css/styles.css
@@ -292,7 +292,7 @@ a {
 
 .team-item-info {
   padding-top: 32px;
-  padding-bottom: 8px;
+  padding-bottom: 0px;
 }
 
 .team-item-img {
@@ -314,10 +314,12 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  /* margin-bottom: 8px; */
 }
 
-.team-contener-icon {
-  padding: 32px 0;
+.team-item-icon {
+  padding-top: 8px;
+  padding-bottom: 32px;
 }
 
 .team-item-icon {
@@ -447,6 +449,7 @@ a {
 }
 
 .footer-logo-text {
+  margin-right: 120px;
 }
 
 .footer-logo {
@@ -467,7 +470,6 @@ a {
 }
 
 .footer-item {
-  margin-left: 120px;
 }
 .footer-item-text {
   font-weight: 500;
