--- a/css/styles.css
+++ b/css/styles.css
@@ -330,7 +330,7 @@ a {
 }
 
 .team-item:hover .team-item-link,
-.team-item:hover .team-item-link {
+.team-item:active .team-item-link {
   background-color: #404bbf;
 }
 .team-item-icon-list:hover .team-item-link {
