--- a/css/styles.css
+++ b/css/styles.css
@@ -331,7 +331,7 @@ a {
 
 .team-item:hover .team-item-link,
 .team-item-icon-list:hover .team-item-link,
-.team-item-icon-list:active .team-item-link {
+.team-item-icon-list:focus .team-item-link {
   background-color: #404bbf;
 }
 /* .team-item-icon-list:hover .team-item-link {
