--- a/css/styles.css
+++ b/css/styles.css
@@ -313,10 +313,10 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .team-item-icon {
-  padding-top: 8px;
 }
 
 .team-item-icon {
